# extract-from-jira

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  Documentação bases Jira.docx  README.md  README_SETUP.md  SPRINT_EXPANSAO_COLUNAS.md  docker-compose.yml  pyproject.toml
api/: main.py  schemas.py
docker/: jira-extractor.cron  run-scheduled-extraction.sh  start-api.sh  start-scheduler.sh
docs/modules/: README.md
extractor/: __init__.py  audit.py  bootstrap.py  business_rules.py  config.py  domain.py  exceptions.py  interfaces.py  jira_api_client.py  jql_builder.py  logging_config.py  normalizer.py  playwright_fallback.py  run.py  service.py  sql_server_writer.py  storage.py  utils.py  validators.py
output/audit/: extraction_audit_2026-03-03.jsonl
tests/: test_api.py  test_business_rules.py  test_config.py  test_jql_builder.py  test_normalizer.py  test_service.py  test_sql_server_writer.py  test_validators.py
validar_se_bases_sao_iguais/: analisadas.xlsx  comparar_por_mes.py  encerradas.xlsx  ingressadas.xlsx
validar_se_bases_sao_iguais/resultado/: comparacao_por_mes_20260303_175311.csv  comparacao_por_mes_20260303_175311.json  comparacao_por_mes_20260303_175335.csv  comparacao_por_mes_20260303_175335.json  comparacao_por_mes_20260303_175355.csv  comparacao_por_mes_20260303_175355.json  comparacao_por_mes_20260303_175457.csv  comparacao_por_mes_20260303_175457.json
